methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:2: error: unclosed character literal
  for (k <- 1 to ''){
                 ^MethodsDogHouse:1: error: Missing closing brace `}' assumed here
def dogHouse() {
^MethodsDogHouse:1: error: expected class or object definition
def dogHouse() {
^MethodsDogHouse:2: error: unclosed character literal
  for (k <- 1 to ''){
                 ^