methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
  for (k <- 1 to ''){
    for(k<- 1 to 2){
      avance()
    }
    gauche()
}